--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/sebaassssssssss/express_workshop#readme",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
   }
